--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <groupId>co.mgentertainment</groupId>
             <artifactId>common-doc-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>co.mgentertainment</groupId>
+            <artifactId>common-syslog-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- spring starter -->
         <dependency>
@@ -57,6 +61,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
