--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,18 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>default</id>
+            <properties>
+                <env></env>
+                <nacos.server></nacos.server>
+                <nacos.username></nacos.username>
+                <nacos.password></nacos.password>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <finalName>mg-file-${project.version}-${maven.build.timestamp}</finalName>
 
