--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
         </dependency>
         <dependency>
             <groupId>co.mgentertainment</groupId>
+            <artifactId>common-file-upload</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>co.mgentertainment</groupId>
             <artifactId>uid-generator-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
@@ -106,14 +110,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>cn.xuyanwu</groupId>
-            <artifactId>spring-file-storage</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-s3</artifactId>
-        </dependency>
         <dependency>
             <groupId>net.bramp.ffmpeg</groupId>
             <artifactId>ffmpeg</artifactId>
